@@ -26,6 +26,7 @@ version 0.84.05
 	shake_reduction setting reading for K-70
 	astrotracer setting reading for K70, K-3II (testing)
 	horizon_correction setting reading for K-70
+	astrotracer timer sec setting reading for K-3II (testing)
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
